--- a/index.html
+++ b/index.html
@@ -9,20 +9,14 @@
     <main>
         <section id="login">
             <div id="imagem">
-                <img src="imagens/fundo.jpg" alt="imagem padrao azul/roxo">
+                
+                <!---imagem vem aqui--->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Bem-vindo(a) de volta! Faça login para acessar sua conta.</p>
-                <form action="cdt.php">
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" id="iemail">
-
-                    <label for="senha">Senha:</label>
-                    <input type="password" name="senha" id="isenha">
-
-                    <input type="submit" value="Entrar" id="enter">
-                    <a href="#">Esqueci a senha</a>
+                <form action="login.php" method="post">
+                    
                 </form>
             </div>
         </section>
