--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title><link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media.css">
 </head>
 <body>
     <main>
@@ -15,8 +16,17 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Bem-vindo(a) de volta! Faça login para acessar sua conta.</p>
-                <form action="login.php" method="post">
-                    
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <label for="ilogin" id="log">Login:</label>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                    </div>
+                    <div class="campo">
+                        <label for="isenha">Senha:</label>
+                        <input type="password" name="Senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" minlength="8" maxlength="20">
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="#" class="botao">Esqueci a senha</a>
                 </form>
             </div>
         </section>
